[package]
name = "k-event-system"
version = "0.1.0"
edition = "2021"
authors = ["kdletters"]
repository = "https://github.com/kdletters/event-system"
description = """
A very super simple event system, only three functions: subscribe, unsubscribe and publish. (and a singleton, never mind.)
Supports async. (see `main-async` in examples)
"""
readme = "README.md"
keywords = [
    "event",
    "event-system",
]
license = "MIT"

[dependencies]
lazy_static = "1.5.0"
lock_freedom = "0.1.1"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"]}